# ATH-R50x-BT

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig.projbuild  LICENSE  Makefile  PROJECT_SUMMARY.md  QCC5124_IMPLEMENTATION_NOTES.md  README.md  SECURITY.md  SETUP.md  flash_firmware.bat  flash_firmware.ps1  flash_firmware.sh  platformio.ini  sdkconfig.defaults
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-firmware.yml  ci.yml
docs/: BUILD_GUIDE.md  HARDWARE_ASSEMBLY.md  build_instructions.md  hardware_design.md  software_architecture.md
examples/: example_usage.cpp
include/: config.h
lib/AudioProcessing/: AudioProcessing.cpp  AudioProcessing.h
lib/QCC5124Control/: QCC5124Control.cpp  QCC5124Control.h
lib/SystemUtils/: SystemUtils.h
main/: CMakeLists.txt  audio_manager.c  audio_manager.h  bluetooth_manager.c  bluetooth_manager.h  config.h  main.c  power_manager.c  power_manager.h  ui_manager.c  ui_manager.h
src/: main.cpp
workflows/: README.md  build-espidf.yml  build-platformio.yml  manual-build.yml  release.yml
